# Quickdeck

./: .dockerignore  .gitignore  CONTRIBUTING.md  CONTRIBUTING.md.  Dockerfile  LICENSE  README.md  app.py  init_data.py  products.xlsx  pyproject.toml  replit.md  requirements.txt  update_db.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATE/.github/ISSUE_TEMPLATE/: feature_request.md
attached_assets/: Pasted-Build-a-complete-E-commerce-Website-for-my-company-QUICKDECK-using-the-details-from-our-business-ca-1763375385292_1763375385296.txt
catalog_portal/: README.md  TECHNICAL_BLUEPRINT.md
catalog_portal/bulk_upload/: bulk_upload.py
catalog_portal/database/: schema.sql
catalog_portal/nextjs/: package-lock.json  package.json  tailwind.config.ts
catalog_portal/nextjs/app/: page.tsx
catalog_portal/nextjs/app/admin/qc/: page.tsx
catalog_portal/nextjs/app/catalog/new/: page.tsx
catalog_portal/nextjs/components/catalog/: CatalogMultiStepForm.tsx
catalog_portal/nextjs/data/: qc_rows.json
catalog_portal/prisma/: schema.prisma
static/admin/css/: admin.css  style.css
static/js/: admin.js  main.js
templates/: about.html  base.html  cart.html  categories.html  checkout.html  contact.html  dashboard.html  index.html  login.html  my_orders.html  order_success.html  product_detail.html  products.html  signup.html  wishlist.html
templates/admin/: activities.html  add_product.html  analytics.html  base.html  bulk_upload.html  customers.html  dashboard.html  edit_product.html  orders.html  products.html  returns.html  settings.html
(+3 files in other folders)
